--- a/lib/TemplateClient/templates/storeServiceItem.xml
+++ b/lib/TemplateClient/templates/storeServiceItem.xml
@@ -1,3 +1,3 @@
-<dom:item xsi:type="{{NAMESPACEID}}:{{TYPE}}">
-    <dom:value>{{VALUE}}</dom:value>
+<dom:item xsi:type="{{{namespaceId}}}:{{{itemType}}}">
+    <dom:value>{{{itemValue}}}</dom:value>
 </dom:item>
